# GoogleTestTrial

./: CMakeLists.txt  README.md  sample.cpp
include/: sample.h
src/: sample.cpp
test/: test_sample.cpp
